--- a/packet/main.tex
+++ b/packet/main.tex
@@ -24,10 +24,10 @@
 \DeclareMathOperator{\Q}{\mathbb{Q}}
 
 %%%% added by NG
-\usetikzlibrary{shapes,backgrounds}
+\usetikzlibrary{shapes,backgrounds,decorations,patterns}
 \usepackage{pgfplots}
 % externalize the figures
-% \usepgfplotslibrary{external}
+% \usepgfplotslibrary{external
 % \tikzexternalize
 
 %Crypto commands
@@ -40,6 +40,7 @@
 
 %comments
 \newcommand{\nsm}[1]{\textcolor{teal}{(NG: #1)}}
+\newcommand{\new}[1]{\textcolor{blue}{#1}}
 \newcommand{\todo}[1]{\textcolor{red}{#1}}
 
 \renewcommand\abstractname{Introduction}
@@ -47,6 +48,7 @@
 \newcounter{exercise}[section]
 \newenvironment{exercise}{\refstepcounter{exercise}\par\bigskip \begin{quotation}{}{\leftmargin .25in\rightmargin .25in}
     \noindent \textbf{Exercise~\thesection.\theexercise }  \rmfamily}{\end{quotation}\par\bigskip}
+\newcommand{\exref}[1]{\hyperref[#1]{\thesection.\ref*{#1}}}
 
 \newenvironment{bonus}{\refstepcounter{exercise}\par\bigskip \begin{quotation}{}{\leftmargin .25in\rightmargin .25in}
     \noindent \textbf{*Bonus Exercise*~\thesection.\theexercise }  \rmfamily}{\end{quotation}\par\bigskip}
@@ -102,7 +104,7 @@ The value of $c$ is described by the distribution $\left\{\frac{1}{2},
 probability one-half.
 
 A variable like $c$ that represents an outcome or event is called a \emph{random 
-variable}, since it can take on one of several values depending based on an underlying 
+variable}, since it can take on one of several values based on an underlying 
 probability distribution. A random variable is \emph{uniformly random} if every possible 
 value is equally likely. In other words, its probability distribution is the 
 \emph{uniform distribution}. The variable $c$ is uniformly random (or simply \emph{uniform}).
@@ -124,6 +126,10 @@ When a random variable is uniform, we say it is chosen \emph{uniformly at random
 $\sample$. For example, the outcome $c$ of a coin toss can be written as $c \sample 
 \{H, T\}$ to mean that $c$ is sampled uniformly from the set $\{H, T\}$. 
 % \nsm{Link to an external resource instead of explaining everything.}
+\nsm{I use the notation $\sample$ because it is widespread in cryptography. 
+$c \sample S$ has a slightly different meaning than $U(S)$, since it 
+concerns itself with the \emph{variable} $c$ instead of representing 
+a distribution.}
 
 \begin{exercise}
     How would you represent a dice roll using the $\sample$ notation?
@@ -140,12 +146,14 @@ Similarly, $c$ is tails with probability one-half:
     \Pr[c=T] = \frac{1}{2}
 \]
 
-To find the probability of one event or another happening, we add probabilities.
-For example, the probability that $c$ is heads or tails is
-
-\[
-    \Pr[c=H] + \Pr[c=T] = \frac{1}{2} + \frac{1}{2} = 1
-\]
+\new{Given these two facts, what is the probability of getting heads \emph{or}
+tails? Because these two events are \emph{mutually exclusive} (that is, 
+if one occurs, it means the other cannot possibly have occured, and 
+vice versa), we can add their probabilities:}
+\begin{align*}
+    \Pr[c = H \text{ or } T] &= \Pr[c=H] + \Pr[c=T] \\
+    &= \frac{1}{2} + \frac{1}{2} = 1
+\end{align*}
 
 Notice that these probabilities sum to 1. 
 This is a common requirement of all probability distributions: the sum of their 
@@ -154,10 +162,178 @@ in the distribution happens with 100\% probability. If the sum was less than 1, 
 would mean that there's some other event that could happen instead, so the distribution
 is incomplete. % If it was greater than 1, then the 
 
-When the value of one random variable is not related to that of another, we say 
-the variables are \emph{independent}. For example, a good coin toss should be 
-independent of the coin used for the toss or the person doing the toss.
-When two random variables are independent, we can multiply the probabilities 
+The pie charts below illustrate this idea. On the left is the probability 
+distribution of a coin toss; on the right, the probability distribution 
+of a dice roll. Notice that in both cases, the probabilities sum to 1.
+
+\begin{figure}[h]
+    \includegraphics[width=.5\linewidth]{coin-pie.png}
+    \includegraphics[width=.5\linewidth]{die-pie.png}
+    % \caption{Left: probability distribution of a coin toss. Right: 
+    % probability distribution of a dice roll. Probabilities always 
+    % sum to 1.}
+    \label{fig:pies}
+  \end{figure}
+
+\new{When two events are not mutually exclusive, however, we can't add 
+their probabilities. For example, what's the probability of rolling a 
+multiple of 2 or a multiple of 3? These are not mutually exclusive
+events, since 6 is a multiple of \emph{both} 2 and 3! Instead, we need 
+to break this question into mutually exclusive events. For example, we 
+could consider the probability of rolling a multiple of two, and add 
+this to the probability of rolling a 3: by doing this, we still cover 
+all the possible outcomes (2, 3, 4, and 6) but broken into mutually 
+exclusive events ($\{2,4,6\}$ or $\{3\}$) instead of overlapping events 
+($\{2, 4, 6\}$ or $\{3, 6\}$). Then}
+
+\begin{align*}
+    &\Pr[d \text{ is a multiple of 2 or 3}] \\
+    &= \Pr[d \text{ is even}] + \Pr[d=3]\\
+    &= \frac{1}{2} + \frac{1}{6}\\
+    &= \frac{4}{6} = \frac{2}{3}
+\end{align*}
+
+\new{where $d$ is the random variable representing the outcome of the die roll.}
+
+\hfill\\
+\nsm{Moved conditional probability before independence.}
+
+Conditional probability is the probability that something occurs 
+provided that another event occurred. This is written with the symbol 
+$\mid$, which is read aloud as ``given''. So, $\Pr[A \mid B]$ is 
+read as ``the probability of $A$ given $B$''.
+
+For example, it's more likely to be raining if the sky is cloudy 
+than if it's clear. We can write this as
+\[
+    \Pr[\text{raining} \mid \text{cloudy sky}] >
+    \Pr[\text{raining} \mid \text{clear sky}]
+\]
+
+The following equality about conditional probability always holds:
+\begin{subequations}\label{eq:conditional}
+    \begin{equation}
+        \Pr[A \mid B] = \frac{\Pr[A \text{ and } B]}{\Pr[B]}
+        \label{eqn:conditional_mid}
+    \end{equation}
+An alternate form is
+    \begin{equation}
+        \Pr[A \text{ and } B] = \Pr[A \mid B] \cdot \Pr[B]
+        \label{eqn:conditional_and}
+    \end{equation}
+\end{subequations}
+
+\nsm{I'm not sure if the explanation that follows is beneficial.}
+\new{Understanding why these equations are true can help us remember them.
+One way to see why they hold is with a Venn diagram:}
+
+\begin{center}
+\begin{tikzpicture}
+    % A
+    \node[draw,%anchor=west,
+        circle,minimum size=5cm,
+        % label={0:$A$},
+        ]                           (A) at (0,0) {};
+    % B
+    \node[draw,%anchor=east,
+        pattern=north east lines,
+        fill opacity=0.5,
+        circle,minimum size=5cm,
+        % label={45:$B$},
+        ]                           (B) at (3,0) {};
+    % labels
+    \node                               at (1.5,0) {$A$ and $B$};
+    \node                               at (-1,0) {$A$ happened};
+    \node                               at (4,0) {$B$ happened};
+
+    \begin{scope}
+        \clip (0,0) circle(2.5cm);
+        \clip (3,0) circle(2.5cm);
+        \fill[pattern=north west lines,
+            opacity=0.5
+            ]                       (0,0) circle(2.5cm);
+    \end{scope}
+\end{tikzpicture}
+\end{center}
+
+\new{Let's think through Equation~\ref{eqn:conditional_mid} with this diagram 
+in front of us. The event ``$A$ given $B$'' means we know $B$ happened, 
+so now our entire realm of possibilities exists only in the circle 
+on the right. Let's zoom in on that circle:} 
+
+\begin{center}
+\begin{tikzpicture}
+    % B
+    \node[draw,%anchor=east,
+        circle,minimum size=5cm,
+        % label={45:$B$},
+        ]                           (B) at (0,0) {};
+    % labels
+    \node[align=right]                        at (1.1,0) {all possible\\events};
+    \node                                     at (-1.5,0) {$A$};
+
+    \begin{scope}
+        \clip (0,0) circle(2.5cm);
+        \draw (-3,0) circle(2.5cm);
+    \end{scope}
+    \begin{scope}
+        \clip (0,0) circle(2.5cm);
+        \clip (-3,0) circle(2.5cm);
+        \fill[pattern=north west lines,
+            opacity=0.5
+            ]                       (0,0) circle(2.5cm);
+    \end{scope}
+\end{tikzpicture}
+\end{center}
+\new{The cases in which $A$ happens next are in the little slice on the 
+left. We want to know the probability $A$ happening given our current 
+information, which is simply the fraction of possible events covered by 
+this area. Zooming back out, that's exactly $\Pr[A \text{ and } B]$ 
+divided by $\Pr[B]$!}
+
+\new{The difference is the reference frame: in the first diagram, we are in a 
+world in which we make no assumptions: all possibilities are open. In 
+the second, we are using the extra information that $B$ happened to 
+limit the world of possibilities. Let's see a concrete example next.}
+
+\begin{example}
+\nsm{Thanks, Seyed, for suggesting this example!}
+    Suppose your friend rolls a die without showing you the result.
+    You know the probability that they rolled a 3 is $\frac{1}{6}$. Now 
+    suppose they tell you, ``I rolled an odd number.'' Using this additional 
+    information, you can update your estimate of the probability that the 
+    die roll is a 3 to $\frac{1}{3}$, since you know the die landed with 
+    equal probability on 1, 3, or 5, and definitely didn't land on 2, 4, 
+    or 6.
+
+    Written in the language of conditional probability, this is
+    \begin{align*}
+        \Pr[d = 3 \mid d \text{ is odd}] 
+        &= \frac{
+                \Pr[d=3 \text{ and } d \text{ is odd}]
+            }{
+                \Pr[d \text{ is odd}]
+            }\\
+        &= \frac{
+                \Pr[d=3]
+            }{
+                \Pr[d \text{ is odd}]
+            }\\
+        &= \frac{1}{6} \div \frac{1}{2} = \frac{2}{6} = \frac{1}{3}
+    \end{align*}
+\end{example}
+
+In some cases, we have $\Pr[A \mid B]=\Pr[A]$. Intuitively, this means 
+that the probability of $A$ is the same regardless or whether or not $B$
+happened. For example, a good coin toss should be independent of the coin 
+used for the toss or the person doing the toss.
+In these cases, we say that $A$ and $B$ are \emph{independent} events, and 
+their corresponding random variables are independent. Then Equation~\ref{eqn:conditional_and}
+simplifies to 
+\[
+   \Pr[A \text{ and } B] = \Pr[A] \cdot \Pr[B]
+\]. 
+This means that for independet random variables, we can just multiply the probabilities 
 of two events together to get the probability that both events happen simultaneously.
 
 \begin{example}
@@ -181,14 +357,10 @@ of two events together to get the probability that both events happen simultaneo
 \end{exercise}
 
 Let's put everything we've learned so far together and work through some examples. 
-Remember, for \emph{or}, we add; for \emph{and}, we multiply.
-
-% \begin{center}
-% \fbox{\parbox{8cm}{\centering 
-% \textbf{or} means $+$\\
-% \textbf{and} means $\cdot$
-% }}
-% \end{center}
+Remember, for the \textbf{or} of two mutually exclusive events, we add; 
+for the \textbf{and} of two independent events, we multiply. In the latter 
+case, if the events aren't mutually exclusive, we use conditional probability 
+(Equations~\ref{eqn:conditional_mid} and~\ref{eqn:conditional_and}).
 
 \begin{example}
     Say I flip a fair coin twice. What's the probability of getting the 
@@ -215,46 +387,10 @@ Remember, for \emph{or}, we add; for \emph{and}, we multiply.
     \end{align*}
 \end{example}
 
-Conditional probability is the probability that something occurs 
-given that another event occurred. This is written with the symbol 
-$\mid$, which is read aloud as ``given''. So, $\Pr[A \mid B]$ is 
-read as ``the probability that $A$ given $B$''.
-
-For example, it's more likely to be raining if the sky is cloudy 
-than if it's clear. We can write this as
-\[
-    \Pr[\text{raining} \mid \text{cloudy sky}] >
-    \Pr[\text{raining} \mid \text{clear sky}]
-\]
-
-When two events A and B are independent, the following equality 
-holds:
-\begin{equation}
-    \Pr[A \text{ and } B] = \Pr[A \mid B] \cdot \Pr[B]
-\end{equation}
-
-\begin{example}
-    Suppose I only flip the coin again if my first coin toss came out heads. 
+\begin{exercise}
+    Suppose I only flip a coin again if my first coin toss came out tails. 
     What's the probability of getting one heads outcome?
-
-    There are two ways of getting one heads outcome: (1) the first toss is heads 
-    (H), and we don't do another coin toss, or (2) the first toss comes uptails,
-    and the second one comes up heads (TH). 
-    
-    Now we need to use conditional probability, since our second coin toss
-    depends on the first:
-    \begin{align*}
-        & \Pr[H] + \Pr[TH]\\
-        =& \Pr[H] + \Pr[TH \mid \text{first toss is }T]\cdot \Pr[\text{first toss is }T]
-    \end{align*}
-
-    Now we plug in the numbers:
-    \begin{align*}
-        =& \frac{1}{2} + \frac{1}{2}\cdot\frac{1}{2}\\
-        =& \frac{1}{2} + \frac{1}{4}\\
-        =& \frac{3}{4}
-    \end{align*}
-\end{example}
+\end{exercise}
 
 \begin{exercise} The following questions deal with rolling a 6-sided die.
     \renewcommand{\labelenumi}{(\alph{enumi})} 
@@ -297,15 +433,15 @@ indistinguishable.
 
 \begin{exercise}
     Write ``indistinguishable'' or ``not indistinguishable''
-    for each pair of probability distributions:
+    for each pair of probability distributions $D_1, D_2$:
     \renewcommand{\labelenumi}{(\alph{enumi})} 
     \begin{enumerate}
-        \item Rolling and even or an odd number on a 6-sided die, 
-        getting heads or tails when you flip a coin
-        \item Drawing a random card from a deck, rolling a 6-sided 
+        \item $D_1$: Rolling an even or an odd number on a 6-sided die, 
+        $D_2$: getting heads or tails when you flip a coin
+        \item $D_1$: Drawing a random card from a deck, $D_2$: rolling a 6-sided 
         die and flipping 3 coins
-        \item Whether or not you get at least one heads when flipping
-        two coins, whether or not you draw a club from a shuffled 
+        \item $D_1$: Whether or not you get at least one heads when flipping
+        two coins, $D_2$: whether or not you draw a club from a shuffled 
         deck.
     \end{enumerate}
 \end{exercise}
@@ -315,15 +451,18 @@ indistinguishable.
 As we'll see, randomness plays an extremely important role in modern cryptographic
 schemes. A cryptographic \emph{scheme} is a well-defined procedure for accomplishing 
 some goal (called a \emph{cryptographic primitive}). For example, the Caesar 
-cipher is an \emph{encryption} scheme. 
-In this packet, you'll learn about several \emph{secret sharing} schemes. 
+cipher is an encryption scheme, meaning it is a procedure for accomplishing
+the cryptographic primitive of encryption. 
+In this packet, you'll learn about several \emph{secret sharing} schemes.
 
 When a scheme's security rests only on the randomness used in it, and not on 
 solving a difficult or very long problem, we say that scheme is
 \emph{information-theoretically secure}. This is different from, for example,
 the schemes in the RSA cryptography packet, whose security depends on 
-the assumed difficulty factoring. (When a scheme is protected by how hard it is 
-to compute something, it is said to be \emph{computationally secure}).
+the assumed difficulty factoring\footnotemark.
+
+\footnotetext{When a scheme is protected by how hard it is 
+to compute something, it is said to be \emph{computationally secure}.}
 
 The exact level of security of a scheme is determined by a \emph{security 
 parameter}, which is a number that's often denoted by the symbol $\lambda$ 
@@ -332,10 +471,12 @@ on the security parameter ahead of time based on how secure they want to
 be. There's usually a tradeoff between security and efficiency, so the 
 parties will settle on a $\lambda$ that makes them feel safe enough without 
 making their computations prohibitively slow (hours, days, or weeks).
-You'll learn more about this in Section~\ref{sec:proof}.
+% We'll learn more about this in Section~\ref{sec:proof}.
+% TODO: future version could have an example where lambda is too small 
+% and show that an adversary can guess $s_1$ with non-negligible probability.
 
 Lambda is usually set to a large power of two, like 128 or 256; to keep 
-numbers reasonable in this packet, we'll let $\lambda=10$.
+numbers reasonable in this packet, though, we'll let $\lambda=10$.
 
 \newpage
 \section{Secret Sharing}\label{sec:ss}
@@ -440,7 +581,7 @@ and \ref{sec:proof}.
 
 \subsection{Formal Definitions*}\label{sec:formal-defs}
 
-We'll now formally what it means to be a secret sharing scheme and the 
+We'll now formally define what it means to be a secret sharing scheme and the 
 properties such a scheme might have, using the standard notation in 
 cryptography. First, we'll define what a secret sharing scheme 
 does without giving implementation details (there could be multiple ways 
@@ -471,30 +612,36 @@ of achieving the same thing, after all).
 % \end{definition}
 
 
-% TODO
-% This abstract notion of secret sharing is a \emph{cryptographic 
-% primitive}. Other cryptographic primitives include public-key encryption
-% and symmetric-key encryption. A primitive consists of an outline and 
-% set of properties and could be \emph{instantiated} by many different 
-% schemes. For example, the additive secret sharing scheme in Figure~\ref{fig:additiveSS}
-% is only one way of sharing secrets. Secret sharing as a primitive was 
-
-Here's a visual representation: \nsm{Might labeling the right side $\D_s^n$ 
-be confusing?}
+Here's a visual representation: \nsm{Is this less confusing?}
 
 \begin{center}
+\pgfdeclarelayer{background}
+\pgfsetlayers{background,main}
 \begin{tikzpicture}[
     ovalnode/.style={ellipse, draw, fill=gray!10,align=center,minimum width=50pt, minimum height=100pt, thick},
 ]
     % Nodes
-    \node[ovalnode] (domain)                        {$\D$};
-    \node[ovalnode] (range)  [right=of domain]      {$\D_s^n$};
+    \node[ovalnode] (domain)                         {$\D$};
+    \node[ovalnode] (range1)  [right=of domain]      {$\D_s$};
+    \begin{pgfonlayer}{background}
+        \node[ovalnode] [right=of range1,xshift=-0.35cm] {$\D_s$};
+        \node[text width=3cm]     at (5.75,1.6)              {$\cdots$};
+        \node[text width=3cm]     at (5.75,-1.6)              {$\cdots$};
+        \node[ovalnode] [right=of range1,xshift=-1.8cm] {};
+        \node[ovalnode] [right=of range1,xshift=-2.3cm] {};
+    \end{pgfonlayer}
+    \draw [decorate,decoration={brace,amplitude=10pt,mirror},yshift=0pt]
+    (2.2,-2) -- (6,-2) node [black,midway,yshift=-1.5em] 
+    {\footnotesize $n$ copies};
+
+    % \node[text width=3cm]     at (5.45,0)              {$\cdots$};
+    % \node[ovalnode] (rangen)  [right=of range1]      {$\D_s$};
 
     % Lines
     \draw[thick,->] (domain.north east) to[out=30,in=150] 
     node[draw=none,fill=none,font=\small,midway,above] {$\share$}
-    (range.north west);
-    \draw[thick,->] (range.south west) to[out=-150,in=-30]
+    (range1.north west);
+    \draw[thick,->] (range1.south west) to[out=-150,in=-30]
     node[draw=none,fill=none,font=\small,midway,below] {$\rec$}
     (domain.south east);
 \end{tikzpicture}
@@ -546,7 +693,7 @@ be confusing?}
     }
     \end{pchstack}
     The $\lfloor \cdot \rfloor$ notation is the ``floor'' operation, which 
-    rounds a decimal down to the integer below it. For example, $\lfloor 3.725 
+    rounds a decimal number down to the integer below it. For example, $\lfloor 3.725 
     \rfloor = 3$.
 
     Again, this is a secret sharing scheme according to Definition~\ref{def:ss}.
@@ -570,8 +717,8 @@ be confusing?}
     for which the equality didn't hold.}
 \end{example}
 
-\begin{example}
-    So setting $s_1$ to always be 3 works when sharing some numbers but not 
+\begin{example}\label{ex:floor}
+    So always setting $s_1$ to 3 works when sharing some numbers but not 
     others. Let's go back to picking $s_1$ randomly:
     \begin{pchstack}[center]
     % \fbox{%
@@ -585,7 +732,7 @@ be confusing?}
     }
     % }
     \end{pchstack}
-    This is still meets Definition~\ref{def:ss}. Is the adjusted scheme correct
+    This still meets Definition~\ref{def:ss}. Is the adjusted scheme correct
     now?
 
     What happens if we share the number 14? First, we pick $s_1$ randomly.
@@ -600,8 +747,12 @@ be confusing?}
     \]
     which is not 14!
     So even though this scheme \emph{can} work for all $s \in \D$, correctness 
-    could fail randomly depending on the choice of $s_1$. So it is still 
-    not correct.
+    will only hold for certain choices of $s_1$, and we have no control over 
+    $s_1$ because it is chosen randomly. So it is still not correct. 
+    \nsm{@Seyed: You commented that this should be ``for some $s$''
+    instead of ``for all''. I think ``for all'' is correct: for any choice 
+    of $s$, there exists an $s_1$ such that this scheme is valid (let $s_1$ 
+    be a factor of $s$; if $s$ is prime, $s_1$ can be 1 or $s$).}
 \end{example}
 
 Even though all the examples above didn't meet correctness, remember that
@@ -709,7 +860,7 @@ be able to win:
     % \emph{probabilistic polynomial-time}, or PPT, adversaries.}
 
     \[
-        \Pr[\textnormal{SS-priv}_{\A,\ss}(t,n) = 1] - \frac{1}{2}
+        \Pr[\textnormal{SS-priv}_{\A,\ss}(n) = 1] - \frac{1}{2}
     \]
 
     is small\footnotemark. This quantity is called $\A$'s \emph{advantage}.
@@ -721,7 +872,7 @@ be able to win:
 \end{definition}
 
 What does this actually mean? If $\A$'s advantage is small, it means that 
-$\Pr[\textnormal{SS-priv}_{\A,\ss}(t,n)=1]$ is very close to one-half. In 
+$\Pr[\textnormal{SS-priv}_{\A,\ss}(n)=1]$ is very close to one-half. In 
 other words, no matter what adversary \A~we are dealing with, the probability 
 that it can win privacy game (i.e., the game outputs 1) should be very close
 to one-half, which is what it should be if \A~were to randomly guess which 
@@ -735,7 +886,7 @@ $\A$ can tell the difference between two secrets based on a single share,
 it means the share gave away some information about the secret it came from.
 
 \bigskip
-Let's work through some examples. For the remainder of the packet, you can 
+Let's work through some examples. For the remainder of this section, you can 
 assume that all schemes are secret sharing schemes that meet Definition~\ref{def:ss}.
 
 \begin{example}
@@ -768,33 +919,59 @@ assume that all schemes are secret sharing schemes that meet Definition~\ref{def
     we get $8$. Then we'll guess $b' = 0$. If we get $4$ from the game, we'll 
     guess $b'=1$. Because of how the secret sharing scheme works (``by 
     definition''), we'll always guess correctly, and $b=b'$ with probability 
-    1! This means that our advantage is $\frac{1}{2}$, which is not small!
+    1. This means that our advantage is $\frac{1}{2}$, which is not small!
     Therefore, this scheme is not private.
-
-    You might say, well, duh! This was obvious from the informal definition 
-    of privacy: if we're given a digit of the secret, we're clearly learning 
-    something about the secret! Looking at the adversary's advantage in the 
-    game, however, makes more sense mathematically. In the case of a much 
-    more complicated scheme, it might be unclear what ``learning something 
-    about the secret'' really means.
 \end{example}
 
+You might say, well, duh! This was obvious from the informal definition 
+of privacy: if we're given a digit of the secret, we're clearly learning 
+something about the secret! Looking at the adversary's advantage in the 
+game, however, makes more sense mathematically. In the case of a much 
+more complicated scheme, it might be unclear what ``learning something 
+about the secret'' really means.
+
+\new{Another thing to notice is that the adversary's choice of $x_0$ and $x_1$
+is important. A very un-clever adversary might choose $x_0$ and $x_1$ with 
+the same tens place and then ask for the $i=1$ share (the tens digit).
+If it does this, it can't tell the shares apart, since they'll have the same
+value. Our definition is formulated to get around issues like this: to 
+show a scheme is secure, we just need to show that there is no adversary 
+with a not-small advantage. This means we only need to think about what the 
+cleverest way to break a scheme would be, and show that even that is 
+impossible.}
+
+\new{This is also a place where problems with cryptographic proofs of security 
+can arise. There are examples of cryptographers publishing papers 
+introducing new, ``secure'' schemes that end up being broken. And yet 
+these schemes had proofs of security! Especially for complicated schemes, 
+it sometimes turns out that the authors didn't think of the most clever 
+adversary to attack the scheme. In other cases, they might assume that 
+something is hard to do, so even if a clever adversary realizes that this 
+is the best way to break the scheme it won't be able to pull off this 
+kind of attack. But then someone discovers a way to solve that 
+hard problem. (For example, RSA cryptography, introduced in 1977\cite{rsa},
+is based on the difficulty of factoring integers. But in 1994, Peter Shor 
+discovered a fast way to factor integers\cite{shor} --- if you have a 
+quantum computer. If you're interested in how RSA cryptography works, 
+you can take a look at the RSA cryptography packet!)}
+
 \begin{example}
-    We already saw that the scheme in Example~\ref{ex:floor3} is not correct.
+    % \hyperref[ex:floor]{\thesection.\ref*{ex:floor3}}
+    We already saw that the scheme in Example~\exref{ex:floor3} is not correct.
     But is it private?
 
     You might think so at first, since the number 3 (the first share) is
-    unrelatedd to the secret, and the second share isn't giving away the 
-    secret if the adversary doesn't know that it's just the secret minus 3.
+    unrelated to the secret, and the second share isn't giving away the 
+    secret if the adversary doesn't know that it's defined as the secret minus 3.
     But in reality, we can't assume that the adversary doesn't know the 
-    inner workings of the \share~algorithm. 
+    inner workings of the \share~algorithm: we need to assume the worst.
     
     This means that $\A$ can consistently win the game if it sets $i = 2$.
     It first picks two values $x_0, x_1$ that are multiples of 3.
     When it gets $s_2$ from the game, it multiplies it by 3 and compares that 
     value to $x_0$ and $x_1$. If it equals $x_0$, it outputs $b' = 0$; 
     otherwise, it outputs $b' = 1$. By the definition of the scheme, $\A$ 
-    wins with probability 1, so its advantage is $\frac{1}{2}$, so the 
+    wins with probability 1, so its advantage is $\frac{1}{2}$, and the 
     scheme is not private.
 \end{example}
 
@@ -1120,15 +1297,17 @@ called \emph{Lagrange interpolation}. It's described by a single equation:
 \end{equation}
 
 Let's break it down bit by bit. First, in case you aren't familiar with 
-the symbols, $\sum_{i=0}^{n-1}$ means to evaluate the expression after 
-$\sum$ for each value of $i$ and then add all those terms together. For 
+the symbols, $\sum_{i=0}^{n-1}$ \new{is called \emph{summation notation} 
+or \emph{sigma notation}}. It means to evaluate the expression after 
+$\sum$ for each value of $i$ \new{(starting at the number below the summation 
+symbol and ending at the number above)} and then add all those terms together. For 
 example:
 
 \[
     \sum_{i=1}^n i = 1 + 2 + \ldots + n
 \]
 
-$\prod$ is similar, but we multiply the expressions instead of adding 
+$\prod$ \new{(\emph{product notation} or \emph{pi notation})} is similar, but we multiply the expressions instead of adding 
 them:
 \[
     \prod_{i=1}^n i = 1 \cdot 2 \cdot \ldots \cdot n
@@ -1144,7 +1323,7 @@ So, $\sum_{i=1}^{4} i = 1+2+3+4 = 10$ and $\prod_{i=1}^4 i = 1 \cdot 2 \cdot 3
         \item $\sum_{i=1}^5 2i$
         \item $\sum_{i=1}^5 1$
         \item $\sum_{i=0}^4 x_i$ where $x_i$ means the $i$th 
-        elements of the set $\{1, 0, 5, -3, 8\}$ and the numbering
+        elements of the set $\{1, 5, -3, 0, 8\}$ and the numbering
         starts at 0 (that is, $x_0=1$).
         \item $\sum_{i=0}^2 x_i$ for the same set.
     \end{enumerate}
@@ -1160,11 +1339,12 @@ expression $\ell_i(x)$. For instance, for $i=2$, it will be of the form
 
 \newcommand{\cyan}[1]{\textcolor{cyan}{#1}}
 \[
-    \frac{x-\cyan{x_0}}{x_2-\cyan{x_0}}
-    \frac{x-\cyan{x_1}}{x_2-\cyan{x_1}}
-    \frac{x-\cyan{x_3}}{x_2-\cyan{x_3}}
+    \setlength{\fboxsep}{.3\fboxsep}
+    \frac{x-\boxed{x_0}}{x_2-\boxed{x_0}}
+    \frac{x-\boxed{x_1}}{x_2-\boxed{x_1}}
+    \frac{x-\boxed{x_3}}{x_2-\boxed{x_3}}
     \cdots
-    \frac{x-\cyan{x_n}}{x_2-\cyan{x_n}}
+    \frac{x-\boxed{x_n}}{x_2-\boxed{x_n}}
 \]
 
 Then we plug that expression $\ell_i(x)$, along with the $y$-value $y_i$ 
@@ -1178,7 +1358,7 @@ start numbering the elements of a set at 0, so $(1,1)$ is the 0th point and $(3,
 the 1st.
 
 \begin{example}
-Use Lagrange interpolation to get a degree-2 polynomial passing through the points 
+Use Lagrange interpolation to get a degree-1 polynomial passing through the points 
 $(1,1), (3,5)$.
 
 Since we have $2$ points, $n=2$:
@@ -1221,7 +1401,7 @@ That's the same equation as the one we graphed!
 \end{example}
 
 \begin{example}
-Let's do the degree-3 example from Section~\ref{sec:unique} next. Our set of 
+Let's do the degree-2 example from Section~\ref{sec:unique} next. Our set of 
 points is $\{(0,3),(1,0),(4,3)\}$ and $n=3$.
 \begin{align*}
     P(x) &= \sum_{i=0}^{2} y_i \ell_i(x)\\
@@ -1267,12 +1447,10 @@ and again we've arrived at the same polynomial we graphed.
 
 \begin{bonus}
     Use Lagrange interpolation to find the unique degree-2 
-    polynomial through the points $\{(-1,-16),(1,-2),(2,28)\}$.
+    polynomial through the points $\{(-1,-16),(1,-2),(2,14)\}$.
 \end{bonus}
 
 \subsection{Sharing Secrets Using Polynomials}
-
-% TODO explain - Why is the actual threshold $t+1$ and not simply $t$? 
 
 Shamir secret sharing is a $(t+1)$-out-of-$n$ secret sharing scheme, for some numbers $t$ and $n$. This means that we split the secret $s$ into $n$ values and distribute them to $n$ people. Then, at least $t+1$ of those people must work together to recover $s$.
 
@@ -1381,15 +1559,16 @@ $y$-intercept and output that.
 \begin{example}
     Now let's say we receive two of the previous shares to reconstruct:
     $(1,17),(3,27)$ We know they are 2-out-of-3 shares (this is realistic; 
-    in real life, $t$ and $n$ would be known to all the parties, or the 
+    in practice, $t$ and $n$ would be known to all the parties, or the 
     points would be labeled with the values of $t$ and $n$ used to 
     generate them.) How do we reconstruct?
 
-    First of all, we know that \emph{can} reconstruct at all because 
+    First of all, \new{we know that reconstruction is possible} because 
     $t+1 = 2$ and we have at least two shares (exactly two, in fact). 
+    \nsm{Is this wording less confusing?}
     Now we need to interpolate to recover the degree-2 polynomial 
     they represent. (If you didn't read Section~\ref{sec:lagrange}, 
-    you can skip to the top of the next page.)
+    you can skip to the evaluation of $f(0)$ on the next page.)
 
     Let's re-number the input shares starting with 
     0, so $(x_0,y_0) = (1,17)$ and $(x_1,y_1) = (3,27)$.
@@ -1427,7 +1606,7 @@ $y$-intercept and output that.
     \end{align*}
 \end{example}
 
-\begin{exercise}
+\begin{bonus}\label{bon:rec-groups}
     Work in a small group. Everyone in the group should pick 
     a secret number to share. Let $n$ be the number of people in 
     your group and pick $t$ so that $t+1 < n$. Use \share~to 
@@ -1437,7 +1616,7 @@ $y$-intercept and output that.
     form a different group of $t+1$ people and run \rec~again
     using this new group of points. You should get the same 
     result!
-\end{exercise}
+\end{bonus}
 
 Notice that in the scheme presented in Figure~\ref{fig:shamirSS},
 it's possible for someone to lie about their point, thereby 
@@ -1459,7 +1638,7 @@ packet.
 \begin{exercise}
     Visit \url{https://bit.ly/ShamirSS} in your browser. This is a 
     Google Colab notebook written in the Python programming language. 
-    It already has the functions \share~and\rec~from Shamir's secret 
+    It already has the functions \share~and \rec~from Shamir's secret 
     sharing scheme. Work through the examples in the notebook to 
     share and reconstruct any numbers you want using this scheme, 
     then read on to find out how to share secret messages!
@@ -1472,6 +1651,27 @@ packet.
 %     if necessary.)
 % \end{bonus}
 
+\section{Beyond secret sharing}
+
+\new{Congratulations on making it through this packet! You have not only 
+learned about secret sharing, a building block for many other cryptographic 
+primitives that are used in the real world\footnotemark, but have also
+gotten a glimpse into what modern cryptography research looks like. 
+The same definitions and proof techniques you saw in this packet pop 
+up in many other areas of cryptography, and you now have a head start in 
+understanding the techniques in many other subfields.}
+
+\footnotetext{\new{Most notably, secret sharing forms the basis of many 
+\emph{multiparty computation (MPC)} schemes. These allow multiple 
+parties, as the name implies, to compute functions over their secret 
+inputs. For example, the Boston Women’s Workforce Council organized 
+an effort which used MPC\cite[page 12]{bwwc} to calculate statistics 
+about the salaries of the workforce in about 16\% of the Boston area to 
+show that the gender pay gap was wider than what the U.S. Bureau of Labor
+Statistics reported\cite{bwwc}. MPC was necessary because companies needed 
+to keep their data on employee salaries secret due to privacy concerns.}}
+
+\newpage
 {\small
 \bibliographystyle{unsrt}
 \bibliography{main}
