--- a/packet/main.bib
+++ b/packet/main.bib
@@ -8,3 +8,39 @@
   year={1979},
   publisher={ACm New York, NY, USA}
 }
+@INPROCEEDINGS{shor,  
+  author={Shor, P.W.},
+  booktitle={Proceedings 35th Annual Symposium on Foundations of Computer Science},
+  title={Algorithms for quantum computation: discrete logarithms and factoring},
+  year={1994},
+  volume={},
+  number={},
+  pages={124-134},
+  doi={10.1109/SFCS.1994.365700}
+}
+@article{rsa,
+  author = {Rivest, R. L. and Shamir, A. and Adleman, L.},
+  title = {A Method for Obtaining Digital Signatures and Public-Key Cryptosystems},
+  year = {1978},
+  issue_date = {Feb. 1978},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  volume = {21},
+  number = {2},
+  issn = {0001-0782},
+  url = {https://doi.org/10.1145/359340.359342},
+  doi = {10.1145/359340.359342},
+  abstract = {An encryption method is presented with the novel property that publicly revealing an encryption key does not thereby reveal the corresponding decryption key. This has two important consequences: (1) Couriers or other secure means are not needed to transmit keys, since a message can be enciphered using an encryption key publicly revealed by the intented recipient. Only he can decipher the message, since only he knows the corresponding decryption key. (2) A message can be “signed” using a privately held decryption key. Anyone can verify this signature using the corresponding publicly revealed encryption key. Signatures cannot be forged, and a signer cannot later deny the validity of his signature. This has obvious applications in “electronic mail” and “electronic funds transfer” systems. A message is encrypted by representing it as a number M, raising M to a publicly specified power e, and then taking the remainder when the result is divided by the publicly specified product, n, of two large secret primer numbers p and q. Decryption is similar; only a different, secret, power d is used, where e * d ≡ 1(mod (p - 1) * (q - 1)). The security of the system rests in part on the difficulty of factoring the published divisor, n.},
+  journal = {Commun. ACM},
+  month = feb,
+  pages = {120–126},
+  numpages = {7},
+  keywords = {public-key cryptosystems, digital signatures, authentication, message-passing, electronic mail, prime number, cryptography, security, factorization, privacy, electronic funds transfer}
+}
+@misc{bwwc,
+  author = {Boston Women’s Workforce Council},
+  title = {{B}oston {W}omen’s {W}orkforce {C}ouncil Report 2017},
+  year = {January 2018},
+  howpublished = {\url{https://www.boston.gov/sites/default/files/document-file-01-2018/bwwc_2017_report.pdf}},
+  note = {Retrieved June 2021}
+}
